--- a/Research_on_water_status.tex
+++ b/Research_on_water_status.tex
@@ -30,11 +30,17 @@
 \begin{abstract}
 
     With the gradually accelerating pace of global decarbonization, highly efficient and clean proton exchange membrane fuel cells(PEMFC) are considered one of the solutions for future energy.
+    % 随着全球脱碳步伐逐渐加快，高效清洁的质子交换膜燃料电池（PEMFC）被认为是未来能源的解决方案之一。
     During the operation of the fuel cell, it is necessary to keep the internal proton exchange membrane in a good state of hydration, so an appropriate method of detecting the hydration state is essential.
+    % 燃料电池运行过程中，需要保持内部质子交换膜处于良好的水合状态，因此合适的水合状态检测方法至关重要。
     At present, the fuel cell system is rapidly developing towards high power, but the methods for detecting the hydration state of high-power fuel cell systems are still relatively lacking.
+    % 目前，燃料电池系统正在向高功率快速发展，但检测高功率燃料电池系统水合状态的方法还比较缺乏。
     Therefore, this paper studies the hydration state of high-power fuel cell systems and builds a condensation tail gas water collection device for calculating the water flow out of the fuel cell system.
+    % 因此，本文研究大功率燃料电池系统的水合状态，搭建冷凝尾气水收集装置用于计算燃料电池系统流出的水流量。
     To verify the water balance model, a controlled variable experiment was conducted on a 100kW fuel cell system under different working temperatures, air metering ratios, and load currents.
+    % 为了验证水平衡模型，在100kW燃料电池系统上进行了不同工作温度、空气计量比和负载电流下的受控变量实验。
     Finally, based on the experimental data, the change rate of the internal water content of the fuel cell system under different conditions was calculated. The results show that, under the same load current, as the working temperature and air metering ratio increase, the change rate of the internal water content of the fuel cell system gradually decreases. Therefore, at low power, it is necessary to maintain an appropriate working temperature, while at high power, maintaining an appropriate metering ratio is more important.
+    % 最后根据实验数据计算出不同条件下燃料电池系统内部含水量的变化率。 结果表明，在相同负载电流下，随着工作温度和空气计量比的增加，燃料电池系统内部含水量的变化率逐渐减小。 因此，在低功率时，需要保持适当的工作温度，而在高功率时，保持适当的计量比更为重要。
 \end{abstract}
 \begin{keyword}
     PEMFC \sep water content \sep water balance\sep high power fuel cell system
