--- a/Research_on_water_status_Chapters/Chapter3_Results.tex
+++ b/Research_on_water_status_Chapters/Chapter3_Results.tex
@@ -55,7 +55,7 @@ Table \ref{tab:RegressionAnalysis} shows the result of analysis:
 \begin{table}
 	\centering
 	\begin{center}
-		\caption{Regression analysis under differnent load current}
+		\caption{Regression analysis under different load current}
 		\label{tab:RegressionAnalysis}
 		\begin{tabular}{l|l|l}
 			\hline
