--- a/Research_on_water_status_Chapters/Hydroside_Waterflow_figure_grouped_by_temperature.tex
+++ b/Research_on_water_status_Chapters/Hydroside_Waterflow_figure_grouped_by_temperature.tex
@@ -4,7 +4,7 @@
 	\begin{tikzpicture}[scale=0.6]
 		\label{fig:airside_waterflow_120A_ratio}
 		\begin{axis}[
-				title={Hydorgen side waterflow at 120A load current},
+				title={Hydrogen side waterflow at 120A load current},
 				xlabel={Airflow Ratio},
 				ylabel={Hydrogen side Water Flow/$g \cdot s^{-1}$},
 				xmin=1.8, xmax=3,
@@ -31,9 +31,9 @@
 	\begin{tikzpicture}[scale=0.6]
 		\label{fig:airside_waterflow_210A_ratio}
 		\begin{axis}[
-				title={Hydorgen side waterflow at 210A load current},
+				title={Hydrogen side waterflow at 210A load current},
 				xlabel={Airflow Ratio},
-				ylabel={Hydorgen side Water Flow/$g \cdot s^{-1}$},
+				ylabel={Hydrogen side Water Flow/$g \cdot s^{-1}$},
 				xmin=1.7, xmax=2.5,
 				ymin=0, ymax=3,
 				ytick distance = 0.5,
@@ -58,9 +58,9 @@
 	\begin{tikzpicture}[scale=0.6]
 		\label{fig:airside_waterflow_300A_ratio}
 		\begin{axis}[
-				title={Hydorgen side waterflow at 300A load current},
+				title={Hydrogen side waterflow at 300A load current},
 				xlabel={Airflow Ratio},
-				ylabel={Hydorgen side Water Flow/$g \cdot s^{-1}$},
+				ylabel={Hydrogen side Water Flow/$g \cdot s^{-1}$},
 				xmin=1.7, xmax=2.5,
 				ymin=2, ymax=4.5,
 				ytick distance = 0.5,
